--- a/app/src/main/res/layout/button_group_list_molecule_layout.xml
+++ b/app/src/main/res/layout/button_group_list_molecule_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card"
@@ -7,14 +7,28 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical"
-    android:layout_marginHorizontal="16dp"
-    android:layout_marginVertical="8dp">
+    android:layout_marginHorizontal="@dimen/margin_16"
+    android:layout_marginVertical="@dimen/margin_8">
+
+    <View
+        android:id="@+id/slider"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/general_0dp"
+        android:layout_margin="@dimen/margin_8"
+        android:background="@drawable/rounded_blue_bg"
+        android:translationX="@dimen/general_0dp"
+        android:foregroundGravity="center_horizontal"
+        app:layout_constraintBottom_toBottomOf="@id/toggle_group"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="@id/toggle_group" />
 
     <com.google.android.material.button.MaterialButtonToggleGroup
         android:id="@+id/toggle_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:chipSpacingHorizontal="12dp"
+        app:chipSpacingHorizontal="@dimen/margin_12"
         app:singleSelection="true"
         app:selectionRequired="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,4 +47,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toggle_group" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
