--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="colorPrimary">#0F9D58</color>
     <color name="colorPrimaryDark">#056008</color>
     <color name="colorAccent">#E39D36</color>
+    <color name="gray_disabled_background">#cccccc</color>
+
+    <color name="brand_blue">#0067B9</color>
+    <color name="transparent">#00000000</color>
 </resources>
